--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,41 +22,41 @@ body {
   border-bottom: #e8ebe4 2.5px;
   border-bottom-style: solid;
 }
-.maria {
+.usuario {
   display: flex;
   height: 55px;
   align-items: center;
   flex: 0 0 50px;
   padding-left: 10px;
 }
-.maria1 {
+.usuario1 {
   width: 50px;
   padding-left: 20px;
 }
-.maria1 img {
+.usuario1 img {
   width: 35px;
   border-radius: 100%;
   border-style: hidden;
 }
-.maria2 {
+.usuario2 {
   display: flex;
   flex-direction: column;
   text-align: left;
   height: 50px;
   padding-left: 20px;
 }
-.maria2 h6 {
+.usuario2 h6 {
   margin: 0;
   padding-top: 5px;
   color: #000000;
 }
-.maria2 p {
+.usuario2 p {
   font-size: 10px;
   width: 80px;
   margin: 0;
   color: #828485;
 }
-.maria-2 {
+.usuario-2 {
   display: flex;
   align-items: center;
   padding-right: 20px;
